fixed css on small screens

--- a/source/stylesheets/components/_card.scss
+++ b/source/stylesheets/components/_card.scss
@@ -9,9 +9,10 @@
   align-items: center;
 }
 .card-contact {
-  min-width: 400px;
+  width: 90%;
+  flex-grow: 1;
   width: auto;
-  height: 20%;
+  // height: 20%;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
@@ -31,32 +32,30 @@
 
 }
 .card-info {
+  flex-grow: 1;
   width: 90%;
   height: 100%;
+  text-align: center;
   p {
-    margin-top: 15px;
+    margin: 30px 0;
     letter-spacing: 3px;
   }
   h1 {
     font-size: 40px;
+    height: auto;
+  }
+  h3{
+    padding: 0 10px;
   }
 }
 .card-projects {
+  // width: 90%;
   text-align: center;
   display: flex;
   justify-content: center;
   align-items: center;
   height: auto;
-  h3 {
-    min-width: 400px;
-  }
 }
-// .sub-card {
-//   color: #4C4F51;
-//   &:hover {
-//     text-decoration: none;
-//   }
-// }
 .banner-links {
   padding: 50px;
 }
@@ -65,11 +64,14 @@
   flex-direction: column;
   justify-content: space-between;
   // align-items: center;
-  height: 600px;
-  width: 600px;
+  // min-height: 600px;
+  min-height: 550px;
+  height: 100%;
+  width: auto;
 }
 .card-icon {
   padding: 5px;
+  margin: 10px 0;
   font-size: 30px;
   color: #46DDD4;
   transition: text-shadow 0.4s;
@@ -83,20 +85,39 @@
   }
 }
 .main-card-right {
-  min-height: 100%;
-  min-width: 500px;
+  // height: 100%;
+  // min-width: 500px;
   width: 50%;
 }
 .main-card-left {
-  min-width: 500px;
+  // min-width: 500px;
+  // height: 120%;
   width: 30%;
 }
-@media screen and (max-width: 800px) {
+// @media screen and (max-width: 800px) {
+//   .main-card {
+//     width: 80%;
+//     height: 80%;
+//   }
+//   .card-contact {
+//     height: 40%;
+//   }
+// }
+@media all and (max-width: 750px) {
   .main-card {
-    width: 60%;
-    height: 60%;
+    width: 80%;
+    height: 80%;
   }
   .card-contact {
-    height: 100px;
+    width: 90%;
   }
+  .card-info {
+    width: 90%;
+  }
+  .card-projects {
+    width: 90%;
+  }
+}
+@media all and (min-width: 750px) {
+/* CSS rules here for screens above 750px */
 }
