--- a/source/stylesheets/components/_wrapper.scss
+++ b/source/stylesheets/components/_wrapper.scss
@@ -5,4 +5,6 @@
   height: auto;
   flex-wrap: wrap;
   align-items: center;
+  width: 100vw;
+  text-align: center;
 }
